After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 765266 - gl: More GLES/GL 3 compatibility fixes
gl: More GLES/GL 3 compatibility fixes
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other All
: Normal blocker
: 1.9.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
: 765517 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2016-04-19 16:51 UTC by Sebastian Dröge (slomo)
Modified: 2016-08-31 10:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
glcolorconvert: GLES3 deprecates texture2D() and it does not work at all in newer versions than 3.3 (1.87 KB, patch)
2016-04-19 16:52 UTC, Sebastian Dröge (slomo)
committed Details | Review
glviewconvert: Port more things to GLES/GL 3 compatibility (24.90 KB, patch)
2016-04-19 16:52 UTC, Sebastian Dröge (slomo)
none Details | Review
glviewconvert: Port more things to GLES/GL 3 compatibility (24.95 KB, patch)
2016-04-20 07:40 UTC, Sebastian Dröge (slomo)
committed Details | Review

Description Sebastian Dröge (slomo) 2016-04-19 16:51:56 UTC
Commit 822f09f6aeaee2202104bbb7dc2ac7b5a299c252 was not complete yet, see
attached patches. The first one definitely works and is required to use
glimagesink on Android now... the second is untested.

Additionally gloverlaycomposition, glcolorbalance and many others also seem to
need similar changes.
Comment 1 Sebastian Dröge (slomo) 2016-04-19 16:52:00 UTC
Created attachment 326340 [details] [review]
glcolorconvert: GLES3 deprecates texture2D() and it does not work at all in newer versions than 3.3

Use the newer texture() function instead. This fixes glimagesink and other
things on various Android devices.
Comment 2 Sebastian Dröge (slomo) 2016-04-19 16:52:06 UTC
Created attachment 326341 [details] [review]
glviewconvert: Port more things to GLES/GL 3 compatibility

And move the shader mangling code into a single place instead of having a copy
in glcolorconvert and glviewconvert.
Comment 3 Sebastian Dröge (slomo) 2016-04-20 07:40:43 UTC
Created attachment 326383 [details] [review]
glviewconvert: Port more things to GLES/GL 3 compatibility

And move the shader mangling code into a single place instead of having a copy
in glcolorconvert and glviewconvert.
Comment 4 Sebastian Dröge (slomo) 2016-04-25 07:35:24 UTC
*** Bug 765517 has been marked as a duplicate of this bug. ***
Comment 5 Matthew Waters (ystreet00) 2016-04-27 08:40:05 UTC
Review of attachment 326383 [details] [review]:

Looks ok.
Comment 6 Sebastian Dröge (slomo) 2016-04-27 08:47:55 UTC
Attachment 326340 [details] pushed as 57a4494 - glcolorconvert: GLES3 deprecates texture2D() and it does not work at all in newer versions than 3.3
Attachment 326383 [details] pushed as b9cfa34 - glviewconvert: Port more things to GLES/GL 3 compatibility
Comment 7 Sebastian Dröge (slomo) 2016-04-27 08:48:57 UTC
That now leaves glcolorbalance, gloverlaycomposition and probably others that need to be ported. Correct?
Comment 8 Matthew Waters (ystreet00) 2016-04-27 08:50:13 UTC
Correct.
Comment 9 Matthew Waters (ystreet00) 2016-06-03 06:08:41 UTC
This seems to have caused a regression for android zerocopy.

See bug 767022
Comment 10 Sebastian Dröge (slomo) 2016-06-03 06:10:27 UTC
You mean https://bugzilla.gnome.org/show_bug.cgi?id=766993
Comment 11 Matthew Waters (ystreet00) 2016-06-03 06:11:10 UTC
And it's bug 766993
Comment 12 Julien Isorce 2016-06-06 09:12:57 UTC
I noticed that we include gl3ext.h here https://cgit.freedesktop.org/gstreamer/gst-plugins-bad/tree/gst-libs/gst/gl/gstglapi.h#n44 . We should include gl2ext.h since gl3ext.h is empty. See https://www.khronos.org/registry/gles/ and https://cgit.freedesktop.org/mesa/mesa/tree/include/GLES3/gl3ext.h
Comment 13 Matthew Waters (ystreet00) 2016-08-31 10:27:22 UTC
(In reply to Sebastian Dröge (slomo) from comment #7)
> That now leaves glcolorbalance, gloverlaycomposition and probably others
> that need to be ported. Correct?

Actually, these all use gles2 shaders where texture2D is fine to use so there's no bug here anymore.